Добавлены классы Game и Team. Генерация команды случайным образом. Прототип боя.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,27 +3,35 @@ project(SberGame)
 
 set(CMAKE_CXX_STANDARD 20)
 
-list(APPEND ${PROJECT_NAME}_HEADERS
-        includes/interfaces/IUnit.h
-        includes/interfaces/IAction.h
-        includes/interfaces/ISpecAction.h
-        includes/interfaces/ICanBeCloned.h
-        includes/interfaces/ICanBeHilled.h
-
-        includes/heros/HeavyHero.h
-        includes/heros/Hero.h
-        includes/heros/Archer.h
-        includes/heros/Hiller.h
-        includes/heros/Wizard.h
-
-        includes/spec_actions/HillSpecAction.h
-        includes/spec_actions/CloneSpecAction.h
-
-        includes/attaks/NormalAttack.h
-)
+#list(APPEND ${PROJECT_NAME}_HEADERS
+#        includes/Game.h
+#        includes/Team.h
+#        includes/UnitFactory.h
+#
+#        includes/interfaces/IUnit.h
+#        includes/interfaces/IAction.h
+#        includes/interfaces/ISpecAction.h
+#        includes/interfaces/ICanBeCloned.h
+#        includes/interfaces/ICanBeHilled.h
+#
+#        includes/heros/HeavyHero.h
+#        includes/heros/Hero.h
+#        includes/heros/Archer.h
+#        includes/heros/Hiller.h
+#        includes/heros/Wizard.h
+#
+#        includes/spec_actions/HillSpecAction.h
+#        includes/spec_actions/CloneSpecAction.h
+#
+#        includes/attaks/NormalAttack.h
+#)
 
 list(APPEND ${PROJECT_NAME}_SOURCES
         main.cpp
+        src/Game.cpp
+        src/Team.cpp
+        src/UnitFactory.cpp
+
         src/heros/HeavyHero.cpp
         src/heros/Hero.cpp
         src/heros/Archer.cpp
