Добавлена механика примитивного боя. Builder команды. 2 типа билдеров команды

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,29 +19,34 @@ set(CMAKE_CXX_STANDARD 20)
 #        includes/heros/Archer.h
 #        includes/heros/Hiller.h
 #        includes/heros/Wizard.h
+#        includes/heros/Wagenburg.h
 #
 #        includes/spec_actions/HillSpecAction.h
 #        includes/spec_actions/CloneSpecAction.h
 #
 #        includes/attaks/NormalAttack.h
+#        includes/attacks/DistanceAttack.h
 #)
 
 list(APPEND ${PROJECT_NAME}_SOURCES
         main.cpp
         src/Game.cpp
-        src/Team.cpp
         src/UnitFactory.cpp
+        src/team/Team.cpp
+        src/team/TeamBuilder.cpp
 
         src/heros/HeavyHero.cpp
         src/heros/Hero.cpp
         src/heros/Archer.cpp
         src/heros/Hiller.cpp
         src/heros/Wizard.cpp
+        src/heros/Wagenburg.cpp
 
         src/spec_actions/HillSpecAction.cpp
         src/spec_actions/CloneSpecAction.cpp
 
         src/attacks/NormalAttack.cpp
+        src/attacks/DistanceAttack.cpp
         )
 
 add_executable(SberGame ${${PROJECT_NAME}_SOURCES})
